# google-adk-demo

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LAUNCH.md  MEMORY.md  README.md  RUN.md  SETUP.md  pyproject.toml  requirements.txt
agent/: __init__.py  config.py  context.py  core.py  db.py  db_listener.py  embeddings.py  event_bus.py  event_translator.py  main.py  memory_service.py  runner.py  server.py  session_service.py  tools.py  ui.html
data/: products.json
scripts/: create_index.py  ingest.py
tests/: test_smoke.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AgentGraph.tsx  AgentNode.tsx  BoundaryNode.tsx  Chat.tsx  EventTimeline.tsx  LibrarySidebar.tsx  NodeDetailPanel.tsx  SavedArtifacts.tsx  SessionList.tsx
ui/src/lib/: dispatch.ts  nodeInfo.ts  prompts.ts  sse.ts  store.ts  types.ts
